@startuml
' === CẤU HÌNH TỐI ƯU CHO BẢO CÁO A4 ===
left to right direction
skinparam dpi 300
skinparam nodesep 50
skinparam ranksep 70
' Lược bỏ các chi tiết thừa của Class Diagram để giống ERD hơn
hide methods
hide circle              

' Cấu hình giao diện (Màu sắc, Font)
skinparam linetype ortho
skinparam defaultFontSize 12
skinparam class {
    BackgroundColor #FAFAFA
    HeaderBackgroundColor #E1F5FE
    BorderColor #0277BD
    ArrowColor #0277BD
    FontSize 14
    AttributeFontSize 12
}
skinparam package {
    BackgroundColor #FFFFFF
    BorderColor #9E9E9E
    FontSize 14
    FontStyle bold
}

' --- ENUMS ---
package "Kiểu dữ liệu Enum" <<Folder>> {
    enum user_status {
        PENDING
        ACTIVE
        LOCKED
    }
    enum property_status {
        DRAFT
        PENDING
        APPROVED
        REJECTED
        HIDDEN
        DELETED
    }
}

' --- NHÓM RBAC (PHÂN QUYỀN) ---
package "Phân quyền (RBAC)" {
    class roles {
        + id : smallserial [PK]
        --
        code : varchar(50)
        name : varchar(120)
    }

    class permissions {
        + id : bigserial [PK]
        --
        code : varchar(100)
        name : varchar(150)
    }

    class role_permissions {
        + role_id : smallint [PK, FK]
        + permission_id : bigint [PK, FK]
    }
}

' --- NHÓM AUTH & JWT ---
package "Xác thực & Token" {
    class auth_sessions {
        + id : uuid [PK]
        --
        user_id : uuid [FK]
        device_id : varchar(120)
        user_agent : text
        ip : inet
        is_active : boolean
        created_at : timestamptz
        last_seen_at : timestamptz
        expires_at : timestamptz
    }

    class refresh_tokens {
        + id : uuid [PK]
        --
        session_id : uuid [FK]
        user_id : uuid [FK]
        token_hash : text
        jti : uuid
        issued_at : timestamptz
        expires_at : timestamptz
        revoked_at : timestamptz
        replaced_by_token_id : uuid [FK]
        revoke_reason : varchar(120)
    }

    class revoked_jtis {
        + jti : uuid [PK]
        --
        user_id : uuid [FK]
        token_type : varchar(20)
        expires_at : timestamptz
        revoked_at : timestamptz
    }

    class password_reset_tokens {
        + id : uuid [PK]
        --
        user_id : uuid [FK]
        email_snapshot : varchar(255)
        otp_hash : text
        reset_token_hash : text
        expires_at : timestamptz
        verified_at : timestamptz
        consumed_at : timestamptz
        attempt_count : integer
        created_at : timestamptz
        updated_at : timestamptz
    }
}

' --- NHÓM CORE (NGHIỆP VỤ CHÍNH) ---
package "Nghiệp vụ Bất động sản" {
    class users {
        + id : uuid [PK]
        --
        full_name : varchar(120)
        email : varchar(255)
        phone : varchar(20)
        password_hash : text
        status : user_status
        last_login_at : timestamptz
        created_at : timestamptz
        updated_at : timestamptz
        deleted_at : timestamptz
    }

    class user_roles {
        + user_id : uuid [PK, FK]
        + role_id : smallint [PK, FK]
    }

    class areas {
        + id : bigserial [PK]
        --
        name : varchar(120)
        slug : varchar(150)
        is_active : boolean
        created_at : timestamptz
        updated_at : timestamptz
    }

    class room_types {
        + id : bigserial [PK]
        --
        name : varchar(80)
        is_active : boolean
        created_at : timestamptz
        updated_at : timestamptz
    }

    class properties {
        + id : uuid [PK]
        --
        host_id : uuid [FK]
        area_id : bigint [FK]
        room_type_id : bigint [FK]
        title : varchar(255)
        description : text
        address_line : varchar(255)
        monthly_price : numeric(14,2)
        area_m2 : numeric(8,2)
        bedrooms : smallint
        allow_pets : boolean
        status : property_status
        approved_by : uuid [FK]
        approved_at : timestamptz
        rejected_reason : text
        created_at : timestamptz
        updated_at : timestamptz
        deleted_at : timestamptz
    }

    class property_images {
        + id : uuid [PK]
        --
        property_id : uuid [FK]
        image_url : text
        is_thumbnail : boolean
        sort_order : int
        created_at : timestamptz
    }

    class notifications {
        + id : uuid [PK]
        --
        recipient_id : uuid [FK]
        type : varchar(50)
        title : varchar(160)
        message : text
        link : varchar(255)
        is_read : boolean
        read_at : timestamptz
        created_at : timestamptz
        updated_at : timestamptz
    }
}

' ==========================================
' MỐI QUAN HỆ (RELATIONSHIPS & FOREIGN KEYS)
' ==========================================

' 1. Quan hệ Core Bất động sản
users "1" --- "0..*" properties : "Đăng/Duyệt"
areas "1" -up- "0..*" properties : "Có"
room_types "1" -up- "0..*" properties : "Có"
properties "1" *-- "0..*" property_images : "Bao gồm"

' 2. Quan hệ Auth & JWT
users "1" *--- "0..*" auth_sessions : "Có"
users "1" *-- "0..*" refresh_tokens : "Sở hữu"
users "1" *-- "0..*" revoked_jtis : "Có"
users "1" *-- "0..*" password_reset_tokens : "Yêu cầu KP"
auth_sessions "1" *-- "0..*" refresh_tokens : "Chứa"

' Thông báo
users "1" --- "0..*" notifications : "Nhận"

' 3. Quan hệ RBAC
users "1" -- "0..*" user_roles
roles "1" -- "0..*" user_roles
roles "1" -- "0..*" role_permissions
permissions "1" -- "0..*" role_permissions

@enduml